2016-09-16  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39310/0008: Src/Zle/compmatch.c: internals: match_str:
	Document several local variables.

	* 39310/0007: Src/Zle/compmatch.c: internals: match_str: Rename
	and constify local variables 'oll', 'olw'.

	* 39310/0006: Src/Zle/compmatch.c: internals: match_str:
	Downscope local variable 'bpc'.

	* 39310/0005: Src/Zle/compmatch.c: internals: match_str:
	Constify some local variables.

	* 39310/0004: Src/Zle/compmatch.c: internals: match_str: Document
	'savl'.

	* 39310/0003: Src/Zle/compmatch.c: internals: match_str: Document
	'savw'. Avoid magic number.

	* 39310/0002: Src/Zle/compmatch.c: internals: match_str:
	Simplify by removing 'zoff'.

	* 39310/0001: Src/Zle/compmatch.c: internals: match_str:
	Document some local variables. See 39123.

	* 39311: Completion/Unix/Command/_tmux: _tmux-capture-pane:
	Tweak specifications of -S/-E and description strings.

2016-09-15  Oliver Kiddle  <opk@zsh.org>

	* 39333: Completion/Base/Utility/_call_program,
	Doc/Zsh/compsys.yo, Completion/Solaris/Command/_pfexec,
	Completion/Unix/Command/_sudo: include name of command used to
	gain priviliges in context for command and gain-priviliges styles

	* 39332: Doc/Zsh/cond.yo, Src/cond.c, Src/params.c, Src/parse.c,
	Completion/Zsh/Context/_condition, Test/C02cond.ztst: support
	ksh's [[ -v varname ]] condition for checking if variables are set

	* unposted: Src/parse.c: remove duplicated assignment

2016-09-14  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Doc/Zsh/expn.yo: small documentation tweaks.

	* zsh-users/21903: Src/subst.c, Src/zsh.h,
	Test/D04parameter.ztst: ${...?...} in interactive shell should
	abort to top level, not just current command.

2016-09-14  Marko Myllynen  <myllynen@redhat.com>

	* unposted: Completion/Unix/Command/_libvirt: Add another
	noglob. (Follow-up to 39199)

2016-09-14  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39199: Completion/Unix/Command/_libvirt: Support libvirt URLs